[gd_scene load_steps=15 format=3 uid="uid://ch815bo2cagj5"]

[ext_resource type="Script" path="res://scenes/shop.gd" id="1_8yecc"]
[ext_resource type="Texture2D" uid="uid://bfdjvrs7xncb4" path="res://assets/moon-bg.png" id="1_fojtg"]
[ext_resource type="PackedScene" uid="uid://tcmuy4s1hh3q" path="res://scenes/moon_base.tscn" id="2_d8rgn"]
[ext_resource type="PackedScene" uid="uid://bpx53yyvjrhty" path="res://scenes/platform.tscn" id="3_fr4v7"]
[ext_resource type="Texture2D" uid="uid://cwyiup11rb3nl" path="res://assets/astronaut-idle.png" id="4_ph41o"]
[ext_resource type="AudioStream" uid="uid://drbj6ik5qcdjd" path="res://assets/sounds/Upgrade.wav" id="6_cv4d0"]
[ext_resource type="AudioStream" uid="uid://dw1r0c40vir0m" path="res://assets/sounds/CantAfford.wav" id="6_f6onw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_go7x4"]
size = Vector2(768, 47)

[sub_resource type="Theme" id="Theme_8u4yq"]
default_font_size = 12

[sub_resource type="Theme" id="Theme_rskcn"]
default_font_size = 12

[sub_resource type="Theme" id="Theme_r1k8j"]
default_font_size = 12

[sub_resource type="Theme" id="Theme_ilb6h"]
default_font_size = 12

[sub_resource type="Theme" id="Theme_irdgu"]
default_font_size = 12

[sub_resource type="Theme" id="Theme_pjorq"]
default_font_size = 12

[node name="Shop" type="Node2D"]
script = ExtResource("1_8yecc")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_fojtg")
offset = Vector2(384, 256)

[node name="Camera2D" type="Camera2D" parent="Background"]
anchor_mode = 0

[node name="MoonBase" parent="." instance=ExtResource("2_d8rgn")]
position = Vector2(125, 455)

[node name="Platform" parent="." instance=ExtResource("3_fr4v7")]
position = Vector2(60, 418)

[node name="Floor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(384, 488.5)
shape = SubResource("RectangleShape2D_go7x4")

[node name="Astronaut-idle" type="Sprite2D" parent="."]
position = Vector2(112, 457)
texture = ExtResource("4_ph41o")

[node name="BackButton" type="Button" parent="."]
offset_left = 211.0
offset_top = 480.0
offset_right = 283.0
offset_bottom = 534.0
scale = Vector2(0.81412, 0.457109)
text = "Back"

[node name="ThrustButton" type="Button" parent="."]
offset_left = 521.0
offset_top = 110.0
offset_right = 721.0
offset_bottom = 164.0
scale = Vector2(1.13412, 0.617109)
text = "Buy: 300"

[node name="FuelEfficiencyButton" type="Button" parent="."]
offset_left = 520.0
offset_top = 165.0
offset_right = 720.0
offset_bottom = 219.0
scale = Vector2(1.13412, 0.617109)
text = "Buy: 300"

[node name="ShieldButton" type="Button" parent="."]
offset_left = 521.0
offset_top = 274.0
offset_right = 721.0
offset_bottom = 328.0
scale = Vector2(1.13412, 0.617109)
text = "Buy: 300"

[node name="FuelCapButton" type="Button" parent="."]
offset_left = 521.0
offset_top = 220.0
offset_right = 721.0
offset_bottom = 274.0
scale = Vector2(1.13412, 0.617109)
text = "Buy: 300"

[node name="InventoryButton" type="Button" parent="."]
offset_left = 522.0
offset_top = 322.0
offset_right = 722.0
offset_bottom = 376.0
scale = Vector2(1.13412, 0.617109)
text = "Buy: 1000"

[node name="WelcomeLabel" type="RichTextLabel" parent="."]
offset_left = 240.0
offset_top = 4.0
offset_right = 519.0
offset_bottom = 50.0
text = "Welcome to the Shop!"
fit_content = true
autowrap_mode = 0

[node name="CreditsLabel" type="RichTextLabel" parent="."]
offset_left = 483.0
offset_top = 400.0
offset_right = 615.0
offset_bottom = 446.0
text = "Credits: 0"
fit_content = true
autowrap_mode = 0

[node name="ThrustLabel" type="RichTextLabel" parent="."]
offset_left = 8.0
offset_top = 96.0
offset_right = 482.0
offset_bottom = 142.0
theme = SubResource("Theme_8u4yq")
text = "Upgrade Thrust (Current Level: 1)"
fit_content = true
autowrap_mode = 0

[node name="FuelEfficiencyLabel" type="RichTextLabel" parent="."]
offset_left = 6.0
offset_top = 159.0
offset_right = 583.0
offset_bottom = 205.0
theme = SubResource("Theme_rskcn")
text = "Upgrade Fuel Efficiency (Current Level: 1)"
fit_content = true
autowrap_mode = 0

[node name="FuelCapLabel" type="RichTextLabel" parent="."]
offset_left = 7.0
offset_top = 212.0
offset_right = 430.0
offset_bottom = 252.0
theme = SubResource("Theme_r1k8j")
text = "Upgrade Fuel Capacity (Current Level: 1)	"
fit_content = true
autowrap_mode = 0

[node name="ShieldLabel" type="RichTextLabel" parent="."]
offset_left = 6.0
offset_top = 270.0
offset_right = 451.0
offset_bottom = 316.0
theme = SubResource("Theme_ilb6h")
text = "Upgrade Shield (Current Level: 0)"
fit_content = true
autowrap_mode = 0

[node name="InventoryLabel" type="RichTextLabel" parent="."]
offset_left = 4.0
offset_top = 317.0
offset_right = 501.0
offset_bottom = 363.0
theme = SubResource("Theme_irdgu")
text = "Upgrade Inventory (Current Level: 1)"
fit_content = true
autowrap_mode = 0

[node name="Upgrade" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_cv4d0")

[node name="CantAfford" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_f6onw")

[node name="RefuelButton" type="Button" parent="."]
offset_left = 255.0
offset_top = 401.0
offset_right = 263.0
offset_bottom = 409.0
theme = SubResource("Theme_pjorq")
text = "Refuel: 0"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ThrustButton" to="." method="on_click_buy_thruster"]
[connection signal="pressed" from="FuelEfficiencyButton" to="." method="on_click_buy_fuel_efficiency"]
[connection signal="pressed" from="ShieldButton" to="." method="on_click_buy_shield"]
[connection signal="pressed" from="FuelCapButton" to="." method="on_click_buy_fuel_capacity"]
[connection signal="pressed" from="InventoryButton" to="." method="on_click_buy_inventory"]
[connection signal="pressed" from="RefuelButton" to="." method="_on_refuel_button_pressed"]
